--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ body {
     overflow: hidden;
     align-items: center;
     background: var(--very-light-gray);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
 
 .hero__bg {
