Add: Credit Card Funtion Finished

--- a/components/HomePage.html
+++ b/components/HomePage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easybank Dashboard</title>
     <link rel="stylesheet" href="/css/homeStyles.css">
+    <link rel="shortcut icon" href="../img/tarjeta-de-credito.png" type="image/x-icon">
 </head>
 <body>
     <div class="main">
@@ -21,12 +22,12 @@
                 
                 <div class="link-item item-2">
                     <i class="fa-solid fa-credit-card link-icon"></i>
-                    <a href="../components/CardPage.html" class="link">Tarjetas</a>
+                    <a href="./CardPage.html" class="link">Tarjetas</a>
                 </div>
 
                 <div class="link-item item-3">
                     <i class="fa-solid fa-user link-icon"></i>
-                    <a href="../components/Profile.html" class="link">Perfil</a>
+                    <a href="./Profile.html" class="link">Perfil</a>
                 </div>
             </div>
 
