--- a/components/Profile.html
+++ b/components/Profile.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easybank Dashboard</title>
     <link rel="stylesheet" href="/css/profileStyles.css">
+    <link rel="shortcut icon" href="../img/tarjeta-de-credito.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="main">
@@ -16,7 +18,7 @@
             <div class="nav-links">
                 <div class="link-item item-3">
                     <i class="fa-solid fa-house link-icon"></i>
-                    <a href="../pages/HomePage.html" class="link">Inicio</a>
+                    <a href="./HomePage.html" class="link">Inicio</a>
                 </div>
                 
                 <div class="link-item item-2">
