--- a/css/profileStyles.css
+++ b/css/profileStyles.css
@@ -52,7 +52,7 @@ body {
     .cta {
         text-decoration: none;
         padding: 15px 50px;
-        background: var(--gradient);
+        background: var(--dark-blue);
         border-radius: 50px;
         color: var(--white);
         font-weight: bold;
@@ -76,7 +76,7 @@ body {
         .select {
             width: 250px;
             padding: 20px;
-            background: var(--gradient);
+            background: var(--dark-blue);
             color: white;
         }
 
@@ -104,18 +104,20 @@ body {
                 color: var(--dark-blue);
             }
 
-            .icon-select{
+            .icon-select {
                 color: white;
             }
         }
 
-        .item-2{
+        .item-2 {
             margin-left: 20px;
             margin-bottom: -20px;
         }
-        .item-3{
+
+        .item-3 {
             margin-left: 20px;
-            a{
+
+            a {
                 margin-left: 10px;
             }
         }
@@ -123,8 +125,7 @@ body {
 
 }
 
- /* Estilos para el modal */
- .modal-overlay {
+.modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -166,7 +167,7 @@ body {
 }
 
 .modal-button.confirm {
-    background: var(--gradient);
+    background: #2f93e0;
     color: white;
 }
 
