--- a/components/CardPage.html
+++ b/components/CardPage.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easybank Dashboard</title>
     <link rel="stylesheet" href="/css/CardStyles.css">
+    <link rel="shortcut icon" href="../img/tarjeta-de-credito.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="main">
@@ -16,7 +18,7 @@
             <div class="nav-links">
                 <div class="link-item item-2">
                     <i class="fa-solid fa-house link-icon"></i>
-                    <a href="../pages/HomePage.html" class="link">Inicio</a>
+                    <a href="./HomePage.html" class="link">Inicio</a>
                 </div>
                 
                 <div class="link-item select">
@@ -48,7 +50,9 @@
         </div>
 
         <div class="main-section">
-
+            <a href="./CreateCard.html" class="add-card-button" title="Crear Tarjeta de Crédito">
+                <i class="fa-solid fa-plus"></i>
+            </a>
         </div>
 
     </div>
