--- a/css/CardStyles.css
+++ b/css/CardStyles.css
@@ -52,7 +52,7 @@ body {
     .cta {
         text-decoration: none;
         padding: 15px 50px;
-        background: var(--gradient);
+        background: var(--dark-blue);
         border-radius: 50px;
         color: var(--white);
         font-weight: bold;
@@ -76,7 +76,7 @@ body {
         .select {
             width: 250px;
             padding: 20px;
-            background: var(--gradient);
+            background: var(--dark-blue);
             color: white;
         }
 
@@ -124,7 +124,6 @@ body {
 }
 
 
- /* Estilos para el modal */
  .modal-overlay {
     position: fixed;
     top: 0;
@@ -167,11 +166,33 @@ body {
 }
 
 .modal-button.confirm {
-    background: var(--gradient);
+    background: #2f93e0;
     color: white;
 }
 
 .modal-button.cancel {
     background-color: var(--dark-blue);
     color: white;
+}
+
+.add-card-button {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color:  hsl(233, 26%, 24%);; 
+    color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    text-decoration: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+}
+
+.add-card-button:hover {
+    background-color:  hsl(233, 65%, 48%);
 }
