Add: Home info finished

--- a/components/CreateCard.html
+++ b/components/CreateCard.html
@@ -23,7 +23,7 @@
           <img src="../img/card-logo.svg" id="logo" alt="">
           <div class="c-data">
             <p id="c-number">0000 0000 0000 0000</p>
-            <p id="c-name">Max Mustermann</p>
+            <p id="c-name">Nombre del titular</p>
           </div>
           <div class="c-date">
             <p id="mm-card">00</p>
@@ -75,7 +75,7 @@
           <input type="button" class="btn" value="Confirmar">
 
           <div class="text-form">
-            <a href="./CardPage.html">Regresar</a>
+            <a href="./CardPage.html" class="back-card">Regresar</a>
           </div>
         </form>
       </div>
