--- a/css/CardStyles.css
+++ b/css/CardStyles.css
@@ -104,19 +104,21 @@ body {
                 color: var(--dark-blue);
             }
 
-            .icon-select{
+            .icon-select {
                 color: white;
             }
         }
 
-        .item-2{
+        .item-2 {
             margin-left: 20px;
             margin-bottom: -20px;
         }
-        .item-3{
+
+        .item-3 {
             margin-top: -20px;
             margin-left: 20px;
-            a{
+
+            a {
                 margin-left: 10px;
             }
         }
@@ -124,7 +126,7 @@ body {
 }
 
 
- .modal-overlay {
+.modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -181,7 +183,8 @@ body {
     right: 20px;
     width: 50px;
     height: 50px;
-    background-color:  hsl(233, 26%, 24%);; 
+    background-color: hsl(233, 26%, 24%);
+    ;
     color: #fff;
     border-radius: 50%;
     display: flex;
@@ -194,5 +197,274 @@ body {
 }
 
 .add-card-button:hover {
-    background-color:  hsl(233, 65%, 48%);
+    background-color: hsl(233, 65%, 48%);
+}
+
+/* CARD */
+
+.container {
+    padding: 50px;
+}
+
+.card {
+    margin-top: 0rem;
+    font-family: 'Space Grotesk', sans-serif;
+}
+
+.c-data {
+    display: flex;
+    flex-direction: column;
+    font-weight: 400;
+    position: relative;
+    top: -9rem;
+    left: 2rem;
+    color: white;
+    gap: 3.5rem;
+}
+
+
+
+#c-number {
+    font-size: 2.3rem;
+}
+
+.ball {
+    position: absolute;
+    top: 4rem;
+    left: 20rem;
+}
+
+.c-date {
+    display: flex;
+    flex-direction: row;
+    top: -10.2rem;
+    left: 23rem;
+    color: white;
+    position: relative;
+}
+
+.cvcc {
+    color: white;
+    position: absolute;
+    top: 6.1rem;
+    left: 15rem;
+}
+
+
+.search-container {
+    margin-top: -100px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.transaction{
+    background: var(--dark-blue);
+    padding: 20px;
+    border: none;
+    border-radius: 10px;
+    transition: all .5s;
+
+    &:hover{
+        scale: 1.05;
+    }
+
+    .trans-a{
+        text-decoration: none;
+        color: white;
+        font-weight: 700;
+        font-size: 14px;
+    }
+}
+
+.search-input {
+    padding: 10px;
+    width: 31%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+table {
+    width: 80%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    max-height: 208px;
+    overflow-y: auto;
+    display: block;
+}
+
+table,
+th,
+td {
+    border: 1px solid #ddd;
+}
+
+th,
+td {
+    padding: 12px;
+    text-align: center;
+    width: auto;
+}
+
+th {
+    background-color: var(--dark-blue);
+    color: white;
+    width: 300px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.transaction-details {
+    color: #555;
+    font-size: 14px;
+}
+
+.amount {
+    font-weight: bold;
+    color: #333;
+}
+
+.status {
+    padding: 5px 10px;
+    border-radius: 5px;
+    width: 110px;
+    display: inline-block;
+}
+
+.completed {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.pending {
+    background-color: #FF9800;
+    color: white;
+
+}
+
+.failed {
+    background-color: #f44336;
+    color: white;
+}
+
+.overlay-transaction {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-transaction {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 500px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.modal-transaction h3 {
+    margin-top: 0;
+    font-size: 1.2em;
+    color: #333;
+}
+
+.ti{
+    margin-bottom: 20px;
+}
+
+.form-item-transaction {
+    margin-bottom: 10px;
+}
+
+.form-item-transaction label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 0.9em;
+    color: #555;
+}
+
+.form-item-transaction input,
+.form-item-transaction select {
+    width: 100%;
+    padding: 8px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.transaction{
+    cursor: pointer;
+    color: white;
+    font-weight: 700;
+}
+
+.transaction-modal-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.transaction-btn {
+    padding: 8px 16px;
+    font-size: 0.9em;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.transaction-btn.confirm {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.transaction-btn.cancel {
+    padding: 8px 16px;
+    margin-top: 20px;
+    background-color: #f44336;
+    color: white;
+}
+
+.transaction-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.form-group input,
+.form-group select {
+    width: 100%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.submit-btn {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+.submit-btn:hover {
+    background-color: #45a049;
 }
