--- a/css/creditCardStyles.css
+++ b/css/creditCardStyles.css
@@ -17,14 +17,15 @@ body {
 .back-card{
     text-decoration: none;
     color: #5789d8;
+    margin-top: -50px;
 }
 
 .display-form{
-    margin-top: -130px;
+    margin-top: -180px;
 }
 
 .card {
-    margin-top: -5rem;
+    margin-top: 5rem;
 }
 
 .fcard {
@@ -48,7 +49,6 @@ body {
 
 .c-number {
     font-size: 2rem;
-
 }
 
 .c-date {
@@ -61,9 +61,7 @@ body {
 }
 
 .backcard {
-
     margin-top: -25rem;
-
 }
 
 #cvcc {
@@ -92,8 +90,11 @@ span {
 .card-info1 {
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    justify-content: space-evenly;
+}
 
+.text-form{
+    margin-top: -20px;
 }
 
 .card-info2 {
@@ -369,11 +370,7 @@ input[type=text] {
     .after-form {}
 
     .card-info1 {
-        gap: 3rem;
-    }
-
-    .btn {
-        margin-top: 2rem;
+        gap: 2rem;
     }
 
     #logo {
